--- a/Composer/packages/client/package.json
+++ b/Composer/packages/client/package.json
@@ -45,6 +45,7 @@
     "babel-plugin-extract-format-message": "^6.2.3",
     "format-message": "^6.2.3",
     "format-message-generate-id": "^6.2.3",
+    "fuse.js": "^6.4.3",
     "immer": "^5.2.0",
     "jsonwebtoken": "^8.5.1",
     "jwt-decode": "^2.2.0",
@@ -60,6 +61,8 @@
     "react-frame-component": "^4.0.2",
     "react-measure": "^2.3.0",
     "react-timeago": "^4.4.0",
+    "react-virtualized-auto-sizer": "^1.0.2",
+    "react-window": "^1.8.6",
     "recoil": "^0.0.13",
     "styled-components": "^4.1.3",
     "uuid": "^8.3.0",
@@ -83,6 +86,8 @@
     "@types/reach__router": "^1.2.4",
     "@types/react": "16.9.23",
     "@types/react-dom": "16.9.5",
+    "@types/react-virtualized-auto-sizer": "^1.0.0",
+    "@types/react-window": "^1.8.2",
     "@types/webpack-env": "^1.15.2",
     "babel-core": "7.0.0-bridge.0",
     "babel-eslint": "10.1.0",
